# glint_pm

./: .gitignore  .python-version  Makefile  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
blogs/: models.py  serializers.py  urls.py  views.py
constants/: constants.py
devs/: admin.py  models.py
glint_pm/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
portfolio/: admin.py  models.py  serializers.py  urls.py  views.py
services/: admin.py  models.py  serializers.py  urls.py  views.py
templates/: verification_email.html
testimonies/: admin.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
utils/: mails.py  utils.py
