[tool.poetry]
name = "glint_pm"
version = "0.1.0"
description = ""
authors = ["Ayobami Alaran ayobamidele006@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sparky-utils = "^1.1.3"
python-dotenv = "^1.0.1"
django-cors-headers = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
